--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9090
 spring.application.name=service-provider1
-#eureka:
-#  instance:
-#    hostname: service-provider1
-#  client:
-#    registerWithEureka: true
-#    fetchRegistry: true
-#  serviceUrl:
-#    defaultZone: http://discovery:8761/eureka/
+eureka:
+ instance:
+   hostname: service-provider1
+ client:
+   registerWithEureka: true
+   fetchRegistry: true
+ serviceUrl:
+   defaultZone: http://discovery:8761/eureka/
