--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=9090
 spring.application.name=service-provider1
 eureka:
   instance:
-    hostname: service-provider1
+    hostname: localhost
 client:
   registerWithEureka: true
   fetchRegistry: true
   serviceUrl:
-    defaultZone: http://discovery:8761/eureka/
+    defaultZone: http://localhost:8761/eureka/
 
